--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ exp-02/pretext_models
 exp-03/__pycache__
 exp-03/pretext_models
 exp-03/processed_data
+exp-04/__pycache__
+exp-04/pretext_models
+exp-04/processed_data
