--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
-tensorflow>=2.8.0
-numpy>=1.19.2
-scikit-learn>=0.24.2
-imbalanced-learn>=0.8.1
-matplotlib>=3.4.3
-xgboost>=1.5.0
-Pillow>=8.3.2
-pandas>=2.2.3
-tabulate>=0.9.0
+tensorflow==2.8.0
+numpy==1.19.2
+scikit-learn==0.24.2
+imbalanced-learn==0.8.1
+matplotlib==3.4.3
+xgboost==1.5.0
+Pillow==8.3.2
+pandas==2.2.3
+tabulate==0.9.0
+ipython==7.31.1
+ipykernel==6.29.5
+ipywidgets==8.1.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyterlab==4.2.5
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+notebook==7.2.2
+traitlets==5.14.3
