--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 .ipynb_checkpoints/
 .vscode/
+venv/
+wslvenv/
+wsl-p39-venv/
+wsl-p3_10-global-gcc9_5_1-bazel5_3_0-cuDNN8_6_CUDA11_8/
+common-utils/token.txt
 exp-02/__pycache__
 exp-02/pretext_models
 exp-03/__pycache__
