--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,33 @@
-tensorflow==2.8.0
-numpy==1.19.2
-scikit-learn==0.24.2
-imbalanced-learn==0.8.1
-matplotlib==3.4.3
-xgboost==1.5.0
-Pillow==8.3.2
-pandas==2.2.3
-tabulate==0.9.0
-ipython==7.31.1
-ipykernel==6.29.5
-ipywidgets==8.1.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyterlab==4.2.5
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-notebook==7.2.2
-traitlets==5.14.3
+# Core ML Packages
+tensorflow==2.9.1 
+# tensorflow==2.12.0              # Compatible with CUDA 11.8 and cuDNN 8.6+
+nvidia-cudnn-cu11==8.6.0.163      # Ensure compatibility with CUDA 11.8, TensorFlow 2.12.0
+numpy==1.22.0                     # Compatible with TensorFlow 2.12.0
+scikit-learn>=1.0.2
+imbalanced-learn>=0.9.0
+matplotlib>=3.5.0
+xgboost>=1.5.0
+Pillow>=9.0.0
+pandas==1.4.0
+
+# Jupyter and Utilities
+tabulate>=0.8.9
+ipython>=8.0.0
+ipykernel>=6.0.0
+ipywidgets>=8.0.0
+jupyter_client>=7.0.0
+jupyter_core>=4.9.0
+jupyter_server>=2.0.0
+jupyterlab>=3.3.0
+nbclient>=0.6.0
+nbconvert>=6.4.0
+nbformat>=5.1.0
+notebook>=6.4.0
+traitlets>=5.1.0
+
+# Build Tools
+setuptools>=58.0.0
+wheel>=0.37.0
+
+# Optional: Development Tools
+# bazel==5.3.0                      # Compatible with TensorFlow 2.12.0 build requirements
