--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,6 @@ exp-06/__pycache__
 exp-06/pretext_models
 exp-06/processed_data
 exp-06/results
+exp-06/figures
 exp-06/model_summaries
 augmentation-check/
